# crest

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  meson.build  meson_options.txt  solvtool.f90
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-request.md
.github/workflows/: build-CI.yml  build-upload.yml  build.yml  cmake-build.yml  stale.yml
assets/tblite/: gfn1-si.toml  gfn1.toml  gfn2.toml  ipea1.toml
assets/template/: metadata.f90
config/: CMakeLists.txt  config.cmake.in  meson.build
config/modules/: Findgfn0.cmake  Findgfnff.cmake  Findlibpvol.cmake  Findlwoniom.cmake  Findmctc-lib.cmake  Findtblite.cmake  Findtest-drive.cmake  Findtoml-f.cmake  Findxhcff.cmake  crest-utils.cmake
docs/: meson.build
docs/man/: crest.adoc  meson.build
examples/: README.md
examples/expl-0/: run.sh
examples/expl-1/: run.sh
examples/expl-2/: run.sh
examples/expl-2.5/: run.sh
examples/expl-3/: run.sh  struc.xyz
examples/expl-4/: run.sh  struc.xyz
examples/expl-5/: run.sh  xtb.trj
examples/expl-6/: run.sh  struc.xyz
examples/expl-7/: run.sh  struc.xyz
examples/expl-8/: run.sh  struc.xyz
examples/expl-9/: run.sh  struc.xyz
src/: CMakeLists.txt  Makefile  acidbase.f90  arvo.f  arvo.f90  atmasses.f90  axis3.f  axis_module.f90  biasmerge.f90  bondconstraint.f90  canonical.f90  ccegen.f90  choose_settings.f90  classes.f90  cleanup.f90  cn.f90  compress.f90  confcross.f90  confopt.f90  confparse.f90  confscript1.f90  confscript2_main.f90  confscript2_misc.f90  confscript3.f90  constraining.f90  controlreader.f90  cregen.f90  crest_main.f90  crest_pars.f90  data.f90  deprotonate.f90  dft_propcalc.f90  drsp.f  ensemblecomp.f90  entropic.f90  entropy.f90  eval_timer.f90  filemod.f90  flexi.F90  flexi.f90  (+76 more)
src/algos/: CMakeLists.txt  ConfSolv.F90  crossing.f90  dynamics.f90  hessian_tools.f90  meson.build  numhess.f90  optimization.f90  parallel.f90  playground.f90  protonate.f90  refine.f90  scan.f90  search_1.f90  search_conformers.f90  search_entropy.f90  search_imtdgc.f90  search_mecp.f90  search_newnci.f90  setuptest.f90  singlepoint.f90
src/calculator/: CMakeLists.txt  api_engrad.f90  api_helpers.F90  api_helpers.f90  calc_module.f90  calc_type.f90  calculator.F90  calculator.f90  constraints.f90  generic_sc.f90  gfn0_api.F90  gfn0_api.f90  gfnff_api.F90  gradreader.f90  libpvol.F90  lj.f90  lwoniom.F90  meson.build  nonadiabatic.f90  oniom_hessian.F90  orca_sc.f90  printouts.F90  subprocess_engrad.f90  subprocess_types.f90  tblite_api.F90  tblite_api.f90  turbom_sc.f90  xhcff.F90  xtb_sc.f90
src/deprecated/: Makefile  confcross.f90  confscript1.f90  io.f  neighbor.f  setdg.f90  utilities.f
src/discretize/: CMakeLists.txt  bessel.f90  discretize.f90  discretize_module.f90  meson.build  mie.f90  probability.f90  von-mises.f90
src/dynamics/: CMakeLists.txt  dynamics.f90  dynamics_module.f90  meson.build  metadynamics_module.f90  shake_module.f90
src/entropy/: CMakeLists.txt  entropic.f90  entropy.f90  meson.build  mie.f90  thermo.f90  thermocalc.f90
src/graphs/: CMakeLists.txt  adjacency.f90  dijkstra.f90  floydwarshall.f90  meson.build  shortpath.f90
src/legacy_algos/: CMakeLists.txt  acidbase.f90  confopt.f90  confscript2_main.f90  confscript2_misc.f90  confscript3.f90  cregen_old.f90  deprotonate.f90  flexi.f90  ligands.f90  meson.build  normmd.f90  pka.f90  protonate.f90  reactor.f90  relaxensemble.f90  stereoisomers.f90  tautomerize.f90  trialmd_legacy.f90  zsort.f90
src/msreact/: CMakeLists.txt  meson.build  msmod.f90  msreact.f90
src/optimize/: CMakeLists.txt  ancopt.f90  bfgs.f90  gd.f90  hessupdate.f90  meson.build  modelhessian.f90  optimization.f90  optimize_maths.f90  optimize_module.f90  optimize_type.f90  optutils.f90  rfo.f90  type_anc.f90
src/parsing/: CMakeLists.txt  confparse2.f90  constraining.f90  meson.build  parse_block.f90  parse_calcdata.f90  parse_csv.f90  parse_datastruct.f90  parse_inputfile.F90  parse_inputfile.f90  parse_keyvalue.f90  parse_maindata.f90  parse_toml.F90  parse_xtbinput.f90
src/qcg/: CMakeLists.txt  meson.build  solvtool.f90  solvtool_misc.f90  volume.f90
src/qmhelpers/: CMakeLists.txt  intpack.f90  local.f90  lopt.f90  meson.build  wiberg_mayer.f90
src/rigidconf/: CMakeLists.txt  analyze.f90  meson.build  reconstruct.f90  rigidconf.f90  tree.f90
subprojects/: .gitignore  README.md  gfn0.wrap  gfnff.wrap  libpvol.wrap  lwoniom.wrap  mctc-lib.wrap  tblite.wrap  xhcff.wrap
subprojects/packagefiles/tblite/: rm_app_test.patch  tblite_patch.patch
test/: CMakeLists.txt  helpers.f90  main.f90  test_CN.F90  test_gfn0.F90  test_gfn0occ.F90  test_gfnff.F90  test_optimization.F90  test_tblite.F90  testmol.f90
testsuite/: main.f90  mctc_accuracy.f90  mctc_error.f90  mctc_testing.f90  meson.build  test_molreader.f90  testsuite_data.f90
